--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
+          <!-- <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Design</a></li>
@@ -831,7 +831,7 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#"> Marketing</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#"> Graphic Design</a></li>
             </ul>
-          </div>
+          </div> -->
 
         </div>
       </div>
