--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
           <div class="col-lg-6">
 
-            <h3 class="fw-bold fs-2 mb-3">They provide something almost like a worthy pleasure</h3>
+            <h3 class="fw-bold fs-2 mb-3">We just don't work but</h3>
             <p>
               At Almaraya Aluminium & Glass Works, we specialize in providing top-quality aluminum and glass solutions for residential, commercial, and industrial spaces. With a commitment to precision and excellence, we transform your vision into durable, elegant structures that elevate both aesthetics and functionality.
             </p>
