--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>ALMARAYA</title>
   <meta name="description" content="Doors and Glass solutions">
-  <meta name="keywords" content="Doors and Glass related work">
+  <meta name="keywords" content="Doors and Glass work">
 
   <!-- Favicons -->
   <link href="assets/img/logo.jpg" rel="icon">
@@ -51,8 +51,11 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+      <!-- <a class="btn-getstarted" href="index.html#about">Get Started</a> -->
+      <a class="btn-getstarted" href="index.html#about">
+        <img src="assets/img/logo.jpg" alt="Almaraya" style="height: 20px; width: 20px; vertical-align: middle; margin-right: 5px;">
+        Get Started
+    </a>
 
     </div>
   </header>
