--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>hello@almaraya-aluminium.com</p>
+                <p>info@almaraya-aluminium.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -804,7 +804,7 @@
               <p>Istanbul, No. 10, Ajman Industrial 2</p>
               <p>Southern Sector, Ajman</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+971 56428 4937</span></p>
-              <p><strong>Email:</strong> <span>hello@almaraya-aluminium.com</span></p>
+              <p><strong>Email:</strong> <span>info@almaraya-aluminium.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
               <a href=""><i class="bi bi-twitter-x"></i></a>
