--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/masonry-portfolio/glass-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Aluminium window</h4>
+                <h4>Wood and Glass</h4>
                 <!-- <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
