--- a/index.html
+++ b/index.html
@@ -719,11 +719,15 @@
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>Call Us</h3>
-                <p>+971 56428 4937</p>
-              </div>
+              <a href="https://wa.me/971564284937" target="_blank">
+                <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                    <i class="bi bi-telephone flex-shrink-0"></i>
+                    <div>
+                        <h3>Call Us or WhatsApp</h3>
+                        <p>+971 56428 4937</p>
+                    </div>
+                </div>
+            </a>
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
@@ -788,7 +792,11 @@
             <div class="footer-contact pt-3">
               <p>Istanbul, No. 10, Ajman Industrial 2</p>
               <p>Southern Sector, Ajman</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+971 56428 4937</span></p>
+              <p class="mt-3"><strong>Phone:</strong>  <a href="https://wa.me/971564284937" target="_blank">
+                <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                        <p>+971 56428 4937</p>
+                </div>
+            </a></p>
               <p><strong>Email:</strong> <span>info@almaraya-aluminium.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
