--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Ziyauddin</h3>
+                <h3>Waqar Yunus</h3>
                 <h4>Site Engineer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -680,7 +680,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Ziyauddin</h4>
+                <h4>Waqar Yunus</h4>
                 <span>Site Engineer</span>
               </div>
             </div>
@@ -724,7 +724,7 @@
                     <i class="bi bi-telephone flex-shrink-0"></i>
                     <div>
                         <h3>Call Us or WhatsApp</h3>
-                        <p>+971 56428 4937</p>
+                        <p>+971 52980 0871</p>
                     </div>
                 </div>
             </a>
@@ -794,7 +794,7 @@
               <p>Southern Sector, Ajman</p>
               <p class="mt-3"><strong>Phone:</strong>  <a href="https://wa.me/971564284937" target="_blank">
                 <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                        <p>+971 56428 4937</p>
+                        <p>+971 52980 0871</p>
                 </div>
             </a></p>
               <p><strong>Email:</strong> <span>info@almaraya-aluminium.com</span></p>
