--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Abdul Rehman</h3>
-                <h4>Manager</h4>
+                <h3>Waqar Yunus</h3>
+                <h4>General Manager</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
@@ -563,7 +563,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Azeem Ansari</h3>
-                <h4>Production Manager</h4>
+                <h4>Project Manager</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
@@ -580,8 +580,8 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Waqar Yunus</h3>
-                <h4>Site Engineer</h4>
+                <h3>Choudary Ziyauddin</h3>
+                <h4>Project Engineer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
@@ -644,8 +644,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Abdul Rehman</h4>
-                <span>Manager</span>
+                <h4>Waqar Yunus</h4>
+                <span>General Manager</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -663,7 +663,7 @@
               </div>
               <div class="member-info">
                 <h4>Azeem Ansari</h4>
-                <span>Production Manager</span>
+                <span>Project Manager</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -680,8 +680,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Waqar Yunus</h4>
-                <span>Site Engineer</span>
+                <h4>Choudary Ziyauddin</h4>
+                <span>Project Engineer</span>
               </div>
             </div>
           </div><!-- End Team Member -->
